--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "tyovuorolista-site",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^2.4.1"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.4"
-  }
+    "name": "tyovuorolista-site",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "cross-env NODE_ENV=development astro dev",
+        "start": "NODE_ENV=development astro dev",
+        "build": "NODE_ENV=production astro build",
+        "preview": "NODE_ENV=production astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "astro": "^2.4.1"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3",
+        "typescript": "^5.0.4"
+    }
 }
