--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
     "type": "module",
     "version": "0.0.1",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development astro dev",
-        "start": "NODE_ENV=development astro dev",
-        "build": "NODE_ENV=production astro build",
-        "preview": "NODE_ENV=production astro preview",
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
         "astro": "astro"
     },
     "dependencies": {
         "astro": "^2.4.1"
     },
     "devDependencies": {
-        "cross-env": "^7.0.3",
         "typescript": "^5.0.4"
     }
 }
