--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "astro": "astro"
     },
     "dependencies": {
-        "astro": "^2.4.1"
+        "astro": "^2.4.1",
+        "astro-icon": "^0.8.0"
     },
     "devDependencies": {
         "typescript": "^5.0.4"
