--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
         "astro": "astro"
     },
     "dependencies": {
-        "astro": "^2.4.1",
-        "astro-icon": "^0.8.0"
+        "@astrojs/vercel": "^3.4.1",
+        "astro": "^2.5.7",
+        "astro-icon": "^0.8.0",
+        "aws-sdk": "^2.1390.0",
+        "vercel": "^30.1.2",
+        "@aws-sdk/client-ses": "^3.131.0"
+
     },
     "devDependencies": {
         "typescript": "^5.0.4"
