--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/react": "^2.2.1",
         "@astrojs/vercel": "^3.4.1",
+        "@aws-sdk/client-ses": "^3.131.0",
+        "@types/react": "^18.2.8",
+        "@types/react-dom": "^18.2.4",
         "astro": "^2.5.7",
         "astro-icon": "^0.8.0",
         "aws-sdk": "^2.1390.0",
-        "vercel": "^30.1.2",
-        "@aws-sdk/client-ses": "^3.131.0"
-
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "vercel": "^30.1.2"
     },
     "devDependencies": {
         "typescript": "^5.0.4"
