--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "astro": "^2.5.7",
         "astro-icon": "^0.8.0",
         "aws-sdk": "^2.1390.0",
+        "dayjs": "^1.11.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "vercel": "^30.1.2"
