--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@astrojs/react": "^2.2.1",
+        "@astrojs/sitemap": "^1.3.3",
         "@astrojs/vercel": "^3.4.1",
         "@aws-sdk/client-ses": "^3.131.0",
         "@types/react": "^18.2.8",
